# cython_catkin_example

./: .travis.yml  CMakeLists.txt  README.rst  package.xml  setup.py
python/cython_catkin_example/: CMakeLists.txt  add_ints.pyx
python/cython_catkin_example/tests/: test_add_ints.py
