<?xml version="1.0"?>
<package>
  <name>cython_catkin_example</name>
  <version>1.0.0</version>
  <description>Simple example of Catkin + Cython</description>

  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>

  <license>MIT</license>

  <author email="www.kentaro.wada@gmail.com">Kentaro Wada</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!--
  TODO(wkentaro): https://github.com/ros/rosdistro/pull/11412
  <build_depend>cython</build_depend>
  -->

  <test_depend>python-nose</test_depend>

  <export>
  </export>

</package>
